--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "n-readlines": "^1.0.1",
-    "web3": "^1.3.6"
+    "web3": "^1.3.6",
+    "bignumber.js": "^8.1.1"
   },
   "devDependencies": {},
   "scripts": {
