--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "do_airdrop.js",
   "dependencies": {
+    "bignumber.js": "^8.1.1",
+    "bn": "^1.0.5",
+    "bn.js": "^5.2.0",
     "dotenv": "^10.0.0",
     "n-readlines": "^1.0.1",
-    "web3": "^1.3.6",
-    "bignumber.js": "^8.1.1"
+    "web3": "^1.3.6"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
